--- a/FB.ipynb
+++ b/FB.ipynb
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "scrolled": true
    },
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -444,9 +444,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Pathompong\\Anaconda3\\lib\\site-packages\\pandas\\core\\frame.py:7138: FutureWarning: Sorting because non-concatenation axis is not aligned. A future version\n",
+      "of pandas will change to not sort by default.\n",
+      "\n",
+      "To accept the future behavior, pass 'sort=False'.\n",
+      "\n",
+      "To retain the current behavior and silence the warning, pass 'sort=True'.\n",
+      "\n",
+      "  sort=sort,\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -11739,7 +11753,7 @@
        "Type                                                                                            Photo  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -11753,7 +11767,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 4,
    "metadata": {
     "scrolled": true
    },
@@ -11831,7 +11845,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {
     "scrolled": true
    },
@@ -11896,7 +11910,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -11917,7 +11931,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 6,
    "metadata": {
     "scrolled": false
    },
@@ -11932,6 +11946,27 @@
       "dtypes: float64(1858), object(202)\n",
       "memory usage: 2.3+ MB\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "Date                                                                         0\n",
+       "Lifetime Total Likes                                                         0\n",
+       "Daily New Likes                                                             36\n",
+       "Daily Unlikes                                                                9\n",
+       "Daily Page Engaged Users                                                     1\n",
+       "                                                                            ..\n",
+       "Weekly Total web site click count per Page by age and gender - &lt;13.M      0\n",
+       "Weekly Total web site click count per Page by age and gender - &lt;13.U      0\n",
+       "Weekly Total web site click count per Page by age and gender - UNKNOWN.F     0\n",
+       "Weekly Total web site click count per Page by age and gender - UNKNOWN.M     0\n",
+       "Weekly Total web site click count per Page by age and gender - UNKNOWN.U     0\n",
+       "Length: 2060, dtype: int64"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -11943,7 +11978,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -12111,7 +12146,7 @@
        "[2060 rows x 5 columns]"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -12141,7 +12176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "metadata": {
     "scrolled": true
    },
@@ -12153,7 +12188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 9,
    "metadata": {
     "scrolled": true
    },
@@ -12263,7 +12298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -12342,16 +12377,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x1f283e3c588>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x1fc693eab48>"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -12394,7 +12429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -12500,16 +12535,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x1f283e6e208>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x1fc6a1c9e08>"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -12569,7 +12604,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 14,
    "metadata": {
     "scrolled": true
    },
@@ -12693,7 +12728,7 @@
        "max                                          4469.000000                            "
       ]
      },
-     "execution_count": 22,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -12705,16 +12740,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x1f293f45388>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x1fc6af7d288>"
       ]
      },
-     "execution_count": 78,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -12741,16 +12776,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x1f293a62cc8>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x1fc6abcae48>"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -12803,7 +12838,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -12812,7 +12847,7 @@
        "'The r-squared score for the model was 0.8523800815849778 on 30 values.'"
       ]
      },
-     "execution_count": 101,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -12842,28 +12877,30 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "By using this model, I can predict the baseline of my post share with error around 15%."
+    "By using this model, I can predict the baseline of my post share. \n",
+    "\n",
+    "However, This is just for a quick solution only. The more formal of regression modeling requires more step to validate the data to avoid the model's bias. A good reference that I found is this blog post - https://towardsdatascience.com/how-do-you-check-the-quality-of-your-regression-model-in-python-fa61759ff685."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([6.27235918])"
+       "array([15.83872428])"
       ]
      },
-     "execution_count": 102,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "data = {'Total Impression':[11500],\n",
-    "        'Stories by Like':[250]\n",
+    "data = {'Total Impression':[16700],\n",
+    "        'Stories by Like':[351]\n",
     "       }\n",
     "X_test2 = pd.DataFrame(data)\n",
     "y_test2 = lm_model.predict(X_test2)\n",
@@ -12872,7 +12909,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -12881,7 +12918,7 @@
        "array([19.30277386])"
       ]
      },
-     "execution_count": 106,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -12899,21 +12936,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "I also tries with page level data to predice Daily New Likes directly and seems like linear regression is not a good model for this data set as r-square is lower than 80%."
+    "I also tries with page level data to predict Daily New Likes directly and seems like linear regression is not a good model for this data set as r-square is lower than 80%."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'The r-squared score for your model was 0.764623628878949 on 44 values.'"
+       "'The r-squared score for your model was 0.7646236288789444 on 44 values.'"
       ]
      },
-     "execution_count": 109,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -12949,13 +12986,12 @@
     "- Ideally, the page admin should also boost the post to increase \"Total Reach\" which will also influence Daily Viral Reach.\n",
     "\n",
     "#### 2. What are the approximated value of factors that influences the page like?\n",
-    "Factors | lower-upper bound\n",
+    "Metrics | Lower-Upper bound\n",
     ":---|:---\n",
     "Like | 38 - 1,000\n",
     "Share | 1 - 40\n",
-    "Other Clicks | 77 - 2,000\n",
-    "Impression | 0 - 40,000\n",
     "Reach | 0 - 25,000\n",
+    "Impression | 0 - 40,000\n",
     "\n",
     "These number can be used as base line to measure and guide the quality of content. \n",
     "Exceeding the upper bound is the better.\n",
